Prevent scrolling if height size too much

--- a/src/assets/styles/_helper.sass
+++ b/src/assets/styles/_helper.sass
@@ -5,4 +5,4 @@
 
 .d-maximize
   width: 100%
-  height: calc(100vh - 2.5rem) // 2.5rem is header height
+  height: calc(80vh - 5rem)
